@@ -23,7 +23,10 @@ export(convertToShortString)
 export(do.call2)
 export(dropNamed)
 export(extractSubList)
-export(first)
+export(findFirst)
+export(findLast)
+export(getFirst)
+export(getLast)
 export(getMaxIndex)
 export(getMaxIndexOfCols)
 export(getMaxIndexOfRows)
@@ -46,7 +49,6 @@ export(isScalarValue)
 export(isUnix)
 export(isValidName)
 export(isWindows)
-export(last)
 export(lib)
 export(listToShortString)
 export(load2)
